--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -16,3 +16,4 @@ $NIGHTHAWK: rgb(18, 18, 18);
 $CHARCOAL2: rgb(26, 46, 56);
 $STATUS: rgb(0, 142, 195);
 $EFFYES: rgb(0, 255, 153);
+$HAZE: rgb(31, 41, 46);
