--- a/src/Components/Home/Welcome.scss
+++ b/src/Components/Home/Welcome.scss
@@ -6,6 +6,7 @@
     align-items: center;
     background-color: black;
     font-weight: bold;
+    background-image: url('../../assets/black-paisely.jpg');
 }
 
 #title {
@@ -29,7 +30,8 @@
     box-shadow: 5px 0px 25px 5px rgba(192, 192, 192, 0.802);
     color: silver;
     color: white;
-    background-color: rgb(8, 8, 8);
+    background-color: rgba(8, 8, 8, 0.75);
+    // background-image: url('../../assets/black-paisely.jpg');
 }
 
 .auth-header {
