--- a/src/Components/PokerTable/Rules.scss
+++ b/src/Components/PokerTable/Rules.scss
@@ -10,26 +10,26 @@
     color: whitesmoke;
 }
 
-.rules-container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    // padding: 2%;
-    // box-shadow: 0px 0px 5px 1px silver;
-    background-color: black;
-}
+// .rules-container {
+//     width: 100%;
+//     height: 100%;
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+//     // padding: 2%;
+//     // box-shadow: 0px 0px 5px 1px silver;
+//     background-color: black;
+// }
 
-.show-stopper {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    // margin-bottom: 20px;
-    // margin-top: 5px;
-}
+// .show-stopper {
+//     width: 100%;
+//     height: 100%;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     // margin-bottom: 20px;
+//     // margin-top: 5px;
+// }
 
 .rules-list-container {
     width: 100%;
