--- a/src/Components/Math/Winner.scss
+++ b/src/Components/Math/Winner.scss
@@ -3,7 +3,7 @@
 .chicken-dinner {
     width: 100%;
     height: 100%;
-    // background: silver;
-    color: $EFFYES;
-    // font-size: small;
+    // background: black;
+    color: gold;
+    font-size: 1em;
 }
