--- a/src/Components/CardFlow/Community.scss
+++ b/src/Components/CardFlow/Community.scss
@@ -1,8 +1,8 @@
 @import '../../sass/styles.scss';
 
 .card-face {
-    width: 85%;   
-    // height: 50%;
+    width: 75%;   
+    // height: 100%;
 }
 
 .card-back {
@@ -13,24 +13,45 @@
 
 .pocket-container {
     width: 65%;
-    height: auto;
+    // height: auto;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
 .Ai1-show {
-    color: $ROYALFLUSH;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    // background-color: blue;
+    color: $HAZE;
+    // font-weight: bold;
+    // font-size: small;
     line-height: 0em;
     text-align: center;
 }
 .Ai2-show {
-    color: $ROYALFLUSH;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    // background-color: blue;
+    color: $HAZE;
+    // font-weight: bold;
+    // font-size: small;
     line-height: 0em;
     text-align: center;
 }
 .Ai3-show {
-    color: $ROYALFLUSH;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    // background-color: blue;
+    color: $HAZE;
+    // font-weight: bold;
+    // font-size: small;
     line-height: 0em;
     text-align: center;
 }
@@ -42,7 +63,7 @@
 
 .pocket-hand {
     width: 100%;
-    height: 100%;
+    // height: 20%;
     display: flex;
     align-items: center;
     justify-content: space-around;
