--- a/src/Components/PokerTable/Gameplay/ActionModal.scss
+++ b/src/Components/PokerTable/Gameplay/ActionModal.scss
@@ -4,7 +4,8 @@
     width: 100%;
     height: 85%;
     // background-color: rgba(10, 10, 10, 0.75);
-    // background-color: $HAZE;
+    background-color: rgba(10, 10, 10, 0.85);
+    background-color: $CHARCOAL;
     // border: 5px dotted rgb(45, 45, 45);
     border-radius: 30px;
     display: flex;
@@ -12,34 +13,21 @@
     align-items: center;
     margin-top: 20px;
     line-height: 1em;
-    background-image: linear-gradient(to right, $CHARCOAL, rgba(10, 10, 10, 0.75));
-    box-shadow: 0px 0px 15px 1px rgba(10, 10, 10, 1);
+    // background-image: linear-gradient(to right, $CHARCOAL, rgba(10, 10, 10, 0.75));
+    // background-image: linear-gradient(to right, $CHARCOAL, rgb(13, 17, 18));
+    box-shadow: inset 0px 0px 10px 2px rgba(10, 10, 10, 1);
+    // box-shadow: 0px 0px 15px 1px rgba(10, 10, 10, 1);
     // box-shadow: inset 0px 0px 20px 5px rgba(10, 10, 10, 1);
 }
 
 .room-title-container {
-    width: 40%;
+    width: 50%;
     color: silver;
     text-align: center;
     // line-height: 0em;
 }
 
-.the-slot {
-    width: 40%;
-    // height: 150%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: silver;
-    line-height: 0em;
 
-    // font-weight: bold;
-    // border: dotted 1px silver;
-    // border-radius: 30px;
-    // background-color: rgba(0, 0, 0, 0.844);
-}
 
 #kicker {
     color: silver;
@@ -68,8 +56,13 @@
 }
 
 .btn-menu {
-    width: 10%;
+    width: 25%;
+    height: 75%;
     margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
 }
 
 #action-pic {
@@ -77,6 +70,7 @@
     height: 40px;
     border-radius: 50%;
     // background-color: white;
+    box-shadow: 0px 0px 5px 1px silver;
     padding: 1%;
     position: relative;
 }
@@ -85,85 +79,24 @@
     cursor: pointer;
 }
 
-#marquee {
-    width: 100%;
-    height: 100%;
-    // flex-direction: column;
-    // line-height: 1em;
-    text-align: center;
-}
 
-#marquee-pocket {
-    width: max-content;
-    color: $LIGHTHOUSE;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-#marquee-name {
-    height: 10%;
-    color: rgb(146, 46, 52);
-    // color: silver;
-    text-align: center;
-    font-weight: bold;
-    // margin-bottom: 5px;
-}
 
 .action-btns {
-    font-size: 10px;
-    width: 85%;
+    font-size: x-small;
+    width: 50%;
     background-color: rgba(10, 10, 10, 0);
     color: rgb(75, 75, 75);
+    color: silver;
     font-weight: bold;
     border: none;
-    // border: 1px solid rgb(75, 75, 75);
-    // border-radius: 20px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    border-radius: 5px;      
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .action-btns:hover {
     cursor: pointer;
-    color: white;
+    color: silver;
     background-color: rgba(0, 0, 0, 0.75);
 }
 
-.rules-container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px 5px 5px 5px;
-    line-height: 0em;
-    border: 5px dashed silver;
-    border: 5px dotted $HAZE;
-    border-radius: 50px;
-    box-shadow: 0px 0px 15px 1px $HAZE;
-    flex-wrap: wrap;
-}
-
-.show-stopper {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    // margin-bottom: 20px;
-    // margin-top: 5px;
-    // background-color: transparent;
-}
-
-.theatre {
-    width: max-content;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin-right: 20px;
-}
-
-#xp {
-    margin-left: 20px;
-    padding-right: 10px;
-}
