--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,6 +1,6 @@
 //  COMPONENT: (Rules.js)  =>  LIST OF POKER HANDS
 $HIGHCARD: rgb(0, 122, 175);
-$PAIR: rgb(0, 122, 175);
+$LIGHTHOUSE2: rgba(0, 122, 175, 0.85);
 $TWOPAIR: red;
 $THREEKIND: green;
 $STRAIGHT: navy;
@@ -10,7 +10,8 @@ $FOURKIND: teal;
 $STRAIGHTFLUSH: black;
 $ROYALFLUSH: rgb(58, 206, 179);
 $LIGHTHOUSE: rgb(0, 122, 175);
-$CARPET: rgb(33, 66, 57);
+$CARPET2: rgba(33, 66, 57, 0.85);
+$CARPET: rgb(28, 61, 52);
 $NIGHTHAWK: rgb(18, 18, 18);
 $CHARCOAL: rgb(25, 33, 37);
 $CHARCOAL2: rgb(26, 46, 56);
