--- a/src/Components/PokerTable/Gameplay/ActionFeed.scss
+++ b/src/Components/PokerTable/Gameplay/ActionFeed.scss
@@ -2,11 +2,13 @@
 
 .Feed-Master {
     width: 100%;
+    height: 100%;
     display: flex;
-    background-color: $CHARCOAL;
-    box-shadow: inset 0px 0px 5px 1px rgba(10, 10, 10, 1);
+    background-color: $CHARCOAL2;
+    box-shadow: inset 0px 0px 10px 1px rgba(10, 10, 10, 1);
     border-radius: 20px;
     justify-content: space-evenly;
     align-items: flex-start;
+    padding-bottom: 15px;
 }
 
