--- a/src/Components/PokerTable/Gameplay/ActionModal.scss
+++ b/src/Components/PokerTable/Gameplay/ActionModal.scss
@@ -7,7 +7,7 @@
     background-color: rgba(10, 10, 10, 0.85);
     background-color: $CHARCOAL;
     // border: 5px dotted rgb(45, 45, 45);
-    border-radius: 30px;
+    border-radius: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -15,7 +15,7 @@
     line-height: 1em;
     // background-image: linear-gradient(to right, $CHARCOAL, rgba(10, 10, 10, 0.75));
     // background-image: linear-gradient(to right, $CHARCOAL, rgb(13, 17, 18));
-    box-shadow: inset 0px 0px 10px 2px rgba(10, 10, 10, 1);
+    // box-shadow: inset 0px 0px 10px 2px rgba(10, 10, 10, 1);
     // box-shadow: 0px 0px 15px 1px rgba(10, 10, 10, 1);
     // box-shadow: inset 0px 0px 20px 5px rgba(10, 10, 10, 1);
 }
