--- a/src/Components/PokerTable/Rules.scss
+++ b/src/Components/PokerTable/Rules.scss
@@ -32,11 +32,11 @@
 // }
 
 .rules-list-container {
-    width: 100%;
-    height: 100%;
+    width: 85%;
+    height: 90%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     line-height: 1em;
 }
@@ -44,7 +44,7 @@
 #rules-title {
     text-align: center;
     line-height: 1em;
-    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .rules-list {
@@ -53,7 +53,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    line-height: 0em;
+    // line-height: 0em;
 }
 
 #modal-icons {
