--- a/src/Components/CardFlow/Community.scss
+++ b/src/Components/CardFlow/Community.scss
@@ -1,19 +1,16 @@
 @import '../../sass/styles.scss';
 
 .card-face {
-    width: 75%;   
-    // height: 100%;
+    width: 75%;
 }
 
 .card-back {
-    width: 40%;   
+    width: 40%;
     border-radius: 5px;
-    // animation: deal 2.5s;
 }
 
 .pocket-container {
     width: 65%;
-    // height: auto;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -21,59 +18,59 @@
 
 .Ai1-show {
     height: 85%;
-    width: max-content;
-    // border-radius: 10px;
+    width: 30%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    // background-color: $CHARCOAL;
     color: silver;
-    // font-weight: bold;
-    // font-size: small;
     line-height: 0em;
     text-align: center;
+    align-items: center;
 }
+
+.rules-container-ai {
+    width: max-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+    border: 3px dotted rgb(95, 95, 95);
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
+#modal-icons-ai {
+    color: silver;
+    margin-right: 5px;
+}
+
 .Ai2-show {
     height: 85%;
-    width: max-content;
-    // border-radius: 10px;
+    width: 30%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    // background-color: $CHARCOAL;
     color: silver;
-    // font-weight: bold;
-    // font-size: small;
     line-height: 0em;
     text-align: center;
 }
 .Ai3-show {
     height: 85%;
-    width: max-content;
-    // border-radius: 10px;
+    width: 30%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    // background-color: $CHARCOAL;
     color: silver;
-    // font-weight: bold;
-    // font-size: small;
     line-height: 0em;
     text-align: center;
 }
 
 #Ai-name {
-    // height: 30px;
-    // background-color: $CHARCOAL;
-    // border-radius: 20px;
-    // box-shadow: 0px 0px 10px 2px black;
     color: silver;
-    // border-bottom: 2px solid silver;
 }
 
 .pocket-hand {
     width: 100%;
-    // height: 20%;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -86,7 +83,6 @@
     justify-content: center;
     align-items: center;
 
-    // position: absolute;
 }
 
 .house-cards {
