--- a/src/Components/PokerTable/Gameplay/ActionFeed.scss
+++ b/src/Components/PokerTable/Gameplay/ActionFeed.scss
@@ -2,7 +2,7 @@
 
 .Feed-Master {
     width: 100%;
-    height: 100%;
+    height: max-content;
     display: flex;
     background-color: $CHARCOAL2;
     box-shadow: inset 0px 0px 10px 1px rgba(10, 10, 10, 1);
