--- a/src/Components/PokerTable/Gameplay/CashMeter.scss
+++ b/src/Components/PokerTable/Gameplay/CashMeter.scss
@@ -9,7 +9,8 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    position: relative;
+    // position: relative;
+    // line-height: 0em;
 }
 
 .modal-counter {
