--- a/src/Components/PokerTable/Gameplay/Game.scss
+++ b/src/Components/PokerTable/Gameplay/Game.scss
@@ -15,7 +15,7 @@
 
 .felt-table {
     width: 85%;
-    height: 65%;
+    height: 55%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -112,7 +112,7 @@
 
 .meter-box {
     width: 100%;
-    height: 20%;
+    height: 30%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -120,10 +120,10 @@
 
 .slider-table {
     width: 50%;
-    height: 90%;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 }
 
