--- a/src/Components/PokerTable/Gameplay/Game.scss
+++ b/src/Components/PokerTable/Gameplay/Game.scss
@@ -123,7 +123,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -142,7 +142,8 @@
 }
 
 .player-status {
-    width: 65%;
+    width: 75%;
+    line-height: 0em;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -153,7 +154,8 @@
 }
 
 .player-status-active {
-    width: 65%;
+    width: 75%;
+    line-height: 0em;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -164,7 +166,8 @@
 }
 
 .player-status-active-w {
-    width: 65%;
+    width: 75%;
+    line-height: 0em;
     display: flex;
     justify-content: space-between;
     align-items: center;
